@@ -70,13 +70,31 @@ task :vm_files do
   #end
 end
 
-def apply_bridgesupport_fixes(bs)
+CORE_MIDI_64_BIT_TYPES = <<-EOS
+<opaque name='MIDIClientRef' type='^{OpaqueMIDIClient=}' type64='I'/>
+<opaque name='MIDIDeviceListRef' type='^{OpaqueMIDIDeviceList=}' type64='I'/>
+<opaque name='MIDIDeviceRef' type='^{OpaqueMIDIDevice=}' type64='I'/>
+<opaque name='MIDIEndpointRef' type='^{OpaqueMIDIEndpoint=}' type64='I'/>
+<opaque name='MIDIEntityRef' type='^{OpaqueMIDIEntity=}' type64='I'/>
+<opaque name='MIDIObjectRef' type='^v' type64='I'/>
+<opaque name='MIDIPortRef' type='^{OpaqueMIDIPort=}' type64='I'/>
+<opaque name='MIDISetupRef' type='^{OpaqueMIDISetup=}' type64='I'/>
+<opaque name='MIDIThruConnectionRef' type='^{OpaqueMIDIThruConnection=}' type64='I'/>
+EOS
+
+def apply_bridgesupport_fixes(bs, include_64bit_types)
+  name = File.basename(bs, '.bridgesupport')
   rules = []
-  case File.basename(bs, '.bridgesupport')
-    when 'CoreMIDI', 'AudioToolbox', 'AudioUnit'
-      rules << [/<cftype /, '<opaque ']
-    else
-      rules << [/<opaque /, '<cftype ']
+  case name
+  when 'CoreMIDI', 'AudioToolbox', 'AudioUnit'
+    rules << [/<cftype /, '<opaque ']
+    if name == 'CoreMIDI' && include_64bit_types
+      # On 64-bit these types are defined as `typedef UInt32 Foo` and don't show
+      # up in the metadata.
+      rules << [/<\/signatures>\s*$/, CORE_MIDI_64_BIT_TYPES + '</signatures>']
+    end
+  else
+    rules << [/<opaque /, '<cftype ']
   end
   txt = File.read(bs)
   rules.each { |a| txt.gsub!(a[0], a[1]) }
@@ -140,7 +158,7 @@ task :bridgesupport_files do
         a = sdk_version.scan(/(\d+)\.(\d+)/)[0]
         sdk_version_headers = ((a[0].to_i * 100) + (a[1].to_i * 10)).to_s
         sh "../bin/gen_bridge_metadata --format complete --cflags \"-isysroot #{sdk_path} -mmacosx-version-min=#{sdk_version} -DTARGET_OS_MAC -D__ENVIRONMENT_MAC_OS_X_VERSION_MIN_REQUIRED__=#{sdk_version_headers} -F#{File.dirname(framework_path)} -framework #{linked_framework}\" --framework #{framework_path} > #{dest}"
-        apply_bridgesupport_fixes(dest)
+        apply_bridgesupport_fixes(dest, true)
         return dest
       end
       return dest if is_handle_nested
@@ -155,7 +173,7 @@ task :bridgesupport_files do
           if sdk_version == "10.7" && child_framework_path.include?("CoreGraphics")
             dest = 'osx/10.7/BridgeSupport/child/CoreGraphics.bridgesupport'
             sh "../bin/gen_bridge_metadata --format complete --cflags \"-isysroot #{sdk_path} -F#{sdk_path}/System/Library/Frameworks/ApplicationServices.framework/Frameworks -mmacosx-version-min=10.7 -DTARGET_OS_MAC -D__ENVIRONMENT_MAC_OS_X_VERSION_MIN_REQUIRED__=100700 -framework ApplicationServices\" --framework #{child_framework_path} > #{dest}"
-            apply_bridgesupport_fixes(dest)
+            apply_bridgesupport_fixes(dest, true)
             merge_path = dest
           else
             merge_path = generate_bridgesupport_file.call(sdk_path, sdk_version, child_framework_path, true)
@@ -188,9 +206,10 @@ task :bridgesupport_files do
 
         a = sdk_version.scan(/(\d+)\.(\d+)/)[0]
         sdk_version_headers = ((a[0].to_i * 10000) + (a[1].to_i * 100)).to_s
-        extra_flags = (sdk_version >= '7.0') ? '--64-bit' : '--no-64-bit'
+        include_64bit_types = sdk_version >= '7.0'
+        extra_flags = include_64bit_types ? '--64-bit' : '--no-64-bit'
         sh "../bin/gen_bridge_metadata --format complete #{extra_flags} --cflags \"-isysroot #{sdk_path} -miphoneos-version-min=#{sdk_version} -DTARGET_OS_IPHONE -D__ENVIRONMENT_IPHONE_OS_VERSION_MIN_REQUIRED__=#{sdk_version_headers} -framework #{framework}\" --framework #{framework_path} > #{dest}"
-        apply_bridgesupport_fixes(dest)
+        apply_bridgesupport_fixes(dest, include_64bit_types)
 
         if framework == 'Foundation' and sdk_version >= '7.0'
           # In iOS 7.0, NSObject is defined in /usr/include/objc/NSObject.h
@@ -204,7 +223,7 @@ task :bridgesupport_files do
           framework = File.basename(framework_path, '.framework')
           headers_path = File.join(framework_path, 'Headers')
           sh "../bin/gen_bridge_metadata --format complete #{extra_flags} --cflags \"-isysroot #{sdk_path} -miphoneos-version-min=#{sdk_version} -DTARGET_OS_IPHONE -D__ENVIRONMENT_IPHONE_OS_VERSION_MIN_REQUIRED__=#{sdk_version_headers} -framework #{framework} -I#{headers_path}\" #{headers_path}/*.h > /tmp/AudioUnit.bridgesupport"
-          apply_bridgesupport_fixes('/tmp/AudioUnit.bridgesupport')
+          apply_bridgesupport_fixes('/tmp/AudioUnit.bridgesupport', include_64bit_types)
           merge_bridgesupport dest, '/tmp/AudioUnit.bridgesupport'          
         end
 
